fix name overflow #2073

--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -109,6 +109,8 @@
                 min-width: 0;
                 .cp-app-contacts-name {
                     white-space: nowrap;
+                    overflow:hidden;
+                    text-overflow: ellipsis;
                 }
                 .cp-app-contacts-icons {
                     text-align: right;
